<?xml version="1.0"?>
<package format="2">
  <name>kvaser_can_rospkg</name>
  <version>1.0.1</version>
  <description>The kvaser_can_rospkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="rongxizhangcar@gmail.com">Rongxi Zhang</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>can_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>dynamic_reconfigure</depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->

  </export>
</package>
